--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+    <color name="green_light">#8bc34a</color>
+    <color name="green_dark">#689f38</color>
+    <color name="yellow_A200">#ffff00</color>
 </resources>
