--- a/app/src/main/res/layout/list_item_course.xml
+++ b/app/src/main/res/layout/list_item_course.xml
@@ -1,43 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/foto"
-        android:layout_width="48dp"
-        android:layout_height="56dp"
-        android:paddingTop="4dp" />
+    <android.support.v7.widget.CardView
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="3dp">
 
-        <TextView
-            android:id="@+id/course_list_item_titleTextView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingTop="2dp"
-            android:text="TesteCurso"
-            android:textStyle="bold" />
+            android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/course_list_item_professorTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="TesteProfessor" />
+            <ImageView
+                android:id="@+id/foto"
+                android:layout_width="48dp"
+                android:layout_height="56dp"
+                android:padding="2dp" />
 
-        <TextView
-            android:id="@+id/course_list_item_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="TesteProfessor"
-            android:textSize="10sp" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
+                <TextView
+                    android:id="@+id/course_list_item_titleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="2dp"
+                    android:text="TesteCurso"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/course_list_item_professorTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:text="TesteProfessor" />
+
+                <TextView
+                    android:id="@+id/course_list_item_timeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:text="TesteProfessor"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
