--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
     <TextView 
         android:id="@+id/sobre"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-    
+        android:layout_width="wrap_content"
+        android:text="Sobre o aplicativo"/>
 
 </LinearLayout>
