--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
     <color name="green_light">#8bc34a</color>
     <color name="green_dark">#689f38</color>
     <color name="yellow_A200">#ffff00</color>
+    <color name="indigo">#3F51B5</color>
 </resources>
