--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,11 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:layout_gravity="center">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
     
     <TextView 
         android:id="@+id/sobre"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Sobre o aplicativo"/>
+        android:layout_width="wrap_content" />
 
 </LinearLayout>
