Update to use TabLayout Google, stop jerking around with tabs!

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        ></include>
+        />
 
     <ImageView
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
         android:layout_height="60dp"
         android:text="sign in with google"
         android:layout_centerHorizontal="true"
-        android:background="@color/common_signin_btn_default_background"/>
+        android:background="@color/green_light"/>
 
     <Button
         android:layout_width="match_parent"
