--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,20 +10,20 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        ></include>
+        />
 
-    <com.cognus.jofoa.SlidingTabLayout
-        android:id="@+id/tabs"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/green_light"
         android:elevation="2dp"
-        ></com.cognus.jofoa.SlidingTabLayout>
+        app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/viewpager"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="0px"
         android:layout_weight="1" />
     
     <com.google.android.gms.ads.AdView
