--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frameLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:background="@color/abc_search_url_text_normal"/>
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"/>
-
-    <Button
-        android:id="@+id/schedule_button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="Schedule"
-        android:layout_centerHorizontal="true"
-        android:background="@color/green_light"/>
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="15dp" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="sign in with google"
-        android:layout_centerHorizontal="true"
-        android:background="@color/green_light"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="sign in with facebook"
-        android:layout_centerHorizontal="true"
-        android:background="@color/indigo"/>
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="15dp" />
-
-    <Button
-        android:id="@+id/about_button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="about"
-        android:layout_centerHorizontal="true"
-        android:background="@color/green_dark"/>
-
-</LinearLayout>
+</FrameLayout>
