--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -13,6 +13,8 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable" />
+            android:background="@color/green_light"
+            app:tabSelectedTextColor="@color/yellow_A200"
+            app:tabTextColor="@android:color/white" />
     </androidx.viewpager.widget.ViewPager>
 </FrameLayout>
