--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:background="@color/abc_search_url_text_normal" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="@drawable/foar"
+        android:scaleType="center" />
 
-<Space
-    android:layout_width="wrap_content"
-    android:layout_height="30dp" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="30dp" />
 
-<Button
-    android:id="@+id/schedule_button"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_centerHorizontal="true"
-    android:background="@color/green_light"
-    android:text="Schedule" />
+    <Button
+        android:id="@+id/schedule_button"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/green_dark"
+        android:text="@string/schedule_button_name"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
